K8/manifests/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      labels:
        app: expense-tracker
    spec:
      containers:
        - name: expense-tracker
          image: suyash172003/expense-tracker:v.0.8
          ports:
            - containerPort: 80
