K8/manifests/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker
  labels:
    app: expense-tracker
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: expense-tracker
  type: NodePort
