K8/manifests/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: expense-tacker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-tracker
                port:
                  number: 80
